# secretsanta

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  index.html  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/: renovate.json
.github/workflows/: ci.yml  docker-test.yml  maintain.yml  marimo.yml  pre-commit.yml  release.yml  test_image.yml
apps/: app.py
docker/: .dockerignore  Dockerfile  Makefile  README.md  test_docker.sh
docs/: tasks.md
pysanta/: __init__.py  app.py  core.py
tests/: __init__.py  conftest.py  test_app.py
